# ai-money

./: CLAUDE.md  README.md
backend/: Dockerfile  README.md  app.py  networth_api.py  pyproject.toml  transactions_api.py
backend/agents/: workflow.py
backend/database/: __init__.py  config.py  models.py  repository.py  session.py
backend/tests/: __init__.py  conftest.py  test_accounts.py  test_networth.py  test_repository.py  test_transactions.py
e2e-tests/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e-tests/tests/: networth.spec.ts
frontend/: .env.local.sample  .gitignore
frontend/src/app/networth/: page.tsx
frontend/src/components/: CalendarView.tsx  Navigation.tsx  NetWorthDashboard.tsx  TransactionFlowClient.tsx  TransactionList.tsx
frontend/src/components/ui/: modal.tsx
frontend/src/utils/: api.ts
