[tool.poetry]
name = "ai-money"
version = "0.1.0"
description = ""
authors = ["Abhinaya Sukumar <abhinaya@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.5"
pandas = "^2.2.3"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
beancount = "2.3.6"
fava = "^1.28"
ollama = "^0.3.3"
streamlit = "^1.40.1"
langchain-anthropic = "^0.3.0"
python-dotenv = "^1.0.1"
langgraph = "^0.2.50"
plotly = "^5.24.1"
# pymilvus = "^2.4.9"
# torch = "2.1.0"
# sentence-transformers = "^3.3.1"
numpy = "<2.0"
torch = "*"
sentence-transformers = "*"
pymilvus = "^2.4.9"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
python-multipart = "^0.0.20"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "off"
reportInvalidTypeForm = "none"
reportTypeVariableUsage = "none"
diagnosticRuleSet = { reportTypeVariableUsage = "none", reportGeneralTypeIssues = "none" }
